--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, MainActivity!</string>
-    <string name="app_name">MyApp5</string>
-
+    <string name="app_name">GIF合成分解器</string>
+	<string name="help">软件说明：使用本软件可以把单张或者多张普通图片合成GIF图片，也可以一次性分解单张或者多张GIF图片变成一张张普通图片。如果你喜欢本软件，请点击广告支持我。谢谢使用！</string>
+	<string name="help2"><u>1.在图片合成界面，如果想单独设置某一张图片延迟的时间，请按住该图片，在弹出的选项中选择“设置持续时间”那一项即可设置。\n2.在图片合成界面，如果想移除列表中某一张图片，请按住该图，在弹出的选项中选择“移除该图片”，即可移除，移除后的图片将不参与合成。\n3.在图片分解界面，如果想移除列表中某项，请按住该项，在弹出的选项中选择“移除该图片”，即可移除，移除后的图片将不会被分解。\n4.在合成图片时，软件是按照图片的添加顺序来设置GIF图片的帧的顺序的，也就是说添加的第一张图片将作为GIF图片的第一帧，以此类推。\n5.合成图片或者分解图片，源文件不会被删除。\n6.在文件选择界面，长按图片项可以查看图片。</u></string>
 </resources>
